# legacy-sipXlang-fr

./: configure.ac  sipxlang-fr.spec.in
sipxpbx/: sipxplugin.beans.xml
sipxpbx/WEB-INF/: LoginPage_fr.properties  sipXconfig-web_fr.properties
sipxpbx/WEB-INF/acd/: AcdAgentPresencePanel_fr.properties  AcdAgentsPanel_fr.properties  AcdAgentsStatsPanel_fr.properties  AcdCallsStatsPanel_fr.properties  AcdHistoryPage_fr.properties  AcdLinesPanel_fr.properties  AcdPresenceServer_fr.properties  AcdQueueSelector_fr.properties  AcdQueuesPanel_fr.properties  AcdQueuesStatsPanel_fr.properties  AcdSelectServerPanel_fr.properties  AcdServerPage_fr.properties  AcdServersPanel_fr.properties  AcdSupervisorConsole_fr.properties  AddAcdAgent_fr.properties  EditAcdAgent_fr.properties  EditAcdLine_fr.properties  EditAcdQueue_fr.properties  ListAcdServers_fr.properties
sipxpbx/acd/: sipxacd-agent_fr.properties  sipxacd-audio_fr.properties  sipxacd-line_fr.properties  sipxacd-queue_fr.properties  sipxacd-server_fr.properties
sipxpbx/commserver/: server_fr.properties  siptrunk_fr.properties  user-settings_fr.properties
sipxpbx/lg-nortel/: line_fr.properties  phone_fr.properties
sipxpbx/linksysPhone/: line_fr.properties  phone_fr.properties
sipxpbx/nortel/: line_fr.properties  phone_fr.properties
sipxpbx/nt1535/: line_fr.properties  phone_fr.properties
sipxpbx/polycom/: line_fr.properties  phone_fr.properties
sipxpbx/sipxpark/: park-orbit_fr.properties
sipxpbx/sipxvxml/: autoattendant_fr.properties
sipxpbx/snom/: line_fr.properties  phone_fr.properties
(+181 files in other folders)
