AC_PREREQ(2.57)
AC_INIT(sipxlang-fr, 15.04, sipx-dev@list.sipfoundry.org)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([sipxpbx/sipxplugin.beans.xml])
AM_INIT_AUTOMAKE(foreign tar-ustar)
m4_include([config/sipXlib2.m4])
AC_SUBST(LANG_ID, fr)
AC_CONFIG_FILES([
  Makefile
  sipxlang-fr.spec
])
AC_OUTPUT
